fix link spacing

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
  }
  .links {
     font-family: 'Raleway', sans-serif;
-    font-size: 1.6em;
+    font-size: 1.4em;
     display: flex;
     justify-content: space-between;
     text-decoration: none;
